# nativescript

./: CMakeLists.txt  LICENSE  README.md
commandline_utilities/: CMakeLists.txt
commandline_utilities/include/: arguments.h  commandline_utilities  filesystem.h  generic.h  path.h
commandline_utilities/include/filesystem/: directory.h  path.h
commandline_utilities/src/: arguments.cpp  filesystem.cpp  generic.cpp  path.cpp
commandline_utilities/src/filesystem/: directory.cpp  path.cpp
include/: config.h  defines.in  utilities.h
src/: config.cpp  nativescript.cpp  utilities.cpp
